; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/age/extr_if_age.c_age_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/age/extr_if_age.c_age_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.age_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @age_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @age_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.age_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.age_softc* @device_get_softc(i32 %4)
  store %struct.age_softc* %5, %struct.age_softc** %3, align 8
  %6 = load %struct.age_softc*, %struct.age_softc** %3, align 8
  %7 = call i32 @AGE_LOCK(%struct.age_softc* %6)
  %8 = load %struct.age_softc*, %struct.age_softc** %3, align 8
  %9 = call i32 @age_stop(%struct.age_softc* %8)
  %10 = load %struct.age_softc*, %struct.age_softc** %3, align 8
  %11 = call i32 @age_setwol(%struct.age_softc* %10)
  %12 = load %struct.age_softc*, %struct.age_softc** %3, align 8
  %13 = call i32 @AGE_UNLOCK(%struct.age_softc* %12)
  ret i32 0
}

declare dso_local %struct.age_softc* @device_get_softc(i32) #1

declare dso_local i32 @AGE_LOCK(%struct.age_softc*) #1

declare dso_local i32 @age_stop(%struct.age_softc*) #1

declare dso_local i32 @age_setwol(%struct.age_softc*) #1

declare dso_local i32 @AGE_UNLOCK(%struct.age_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
